--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+a:hover {
+  opacity: 0.7 !important;
+  color: white !important;
+  text-decoration: none !important;
+}
