--- a/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
@@ -25,7 +25,7 @@
     <% end %>
     <div class="search-form">
       <%= form_tag(root_path, method: :get) do%>
-        <%= text_field_tag(:search, params[:search],  placeholder: 'Search for a car...') %>
+        <%= text_field_tag(:search, params[:search],  placeholder: 'Search for a beer...') %>
         <% end %>
     </div>
   </div>
