--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,7 +22,8 @@ body {
   width: 100vw;
   justify-content: space-between;
   height: $height;
-  padding-top: 13px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   min-width: 1000px;
 }
 
@@ -52,7 +53,7 @@ body {
 
 .btn-navbar {
   margin-right: 20px;
-  line-height: $height;
+  line-height: $height - 20;
   text-decoration: none;
   color: black;
   padding-left: 5px;
