--- a/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
@@ -1,7 +1,6 @@
 <style>
   .container-navbar {
-    position: fixed;
-    z-index: 10;
+    position: sticky;
     top: 0;
     background-color: white;
   }
