--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,8 +1,10 @@
 <div class="landing">
-  <div class="landing-title">
-    <h2>Don't just drink beer</h2>
-    <h1>Tap Into It</h1>
-  </div>
-  <div class="landing-search-bar">
+  <div class="landing-content">
+    <div class="landing-title">
+      <h2>Don't just drink beer</h2>
+      <h1>Tap Into It</h1>
+    </div>
+    <div class="landing-search-bar">
+    </div>
   </div>
 </div>
