--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -3,7 +3,6 @@
   text-align: center;
 }
 .beer-cards {
-  margin-top: 70px;
   margin-right: 100px;
   margin-left: 100px;
   display: flex;
@@ -55,40 +54,50 @@
   font-weight: 300;
 }
 
-.center-myself {
-  display: flex;
-  justify-content: center;
+// .center-myself {
+//   display: flex;
+//   justify-content: center;
+// }
+
+
+.go-to-beers-btn {
+  color: black;
+  background-color: transparent;
+  border: 2px solid black;
+  border-radius: 5px;
+  text-transform: capitalize;
+  margin: 5px;
+  padding: 5px;
+  text-decoration: none;
 }
 
-.details-and-photo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.go-to-beers-btn:hover {
+  opacity: 0.5;
 }
 
 .show-beer-card {
-  display: flex;
-  margin: 20px;
-  height: 300px;
-  width: 500px;
-  align-items: center;
-  justify-content: flex-start;
+
+}
+
+.beer-container-show {
   background-color: white;
-  border-radius: 15px;
-  padding: 5px;
+
 }
 
 
 
 .beer-photo-card {
+  text-align: center;
   img {
+    height: 500px;
     border-radius: 15px;
   }
 }
 
 .beer-title-show {
+  font-weight: 300;
+  color: #E67E22;
+  font-size: 45px;
   text-align: center;
-  color: black;
-  font-weight: 600;
-  padding-top: 12px;
+  margin: 25px;
 }
