--- a/app/views/shared/navbar/_navbar_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_black.html.erb
@@ -21,8 +21,8 @@
       <%= image_tag "logo.png", class: "logo" %>
     <% end %>
     <div class="search-form">
-      <%= form_tag(root_path, method: :get) do%>
-        <%= text_field_tag(:search, params[:search],  placeholder: 'Search for a beer...') %>
+      <%= form_tag(beers_path, method: :get) do%>
+        <%= text_field_tag(:search, params[:search],  placeholder: 'Search for a beer or a brewery...') %>
         <% end %>
     </div>
   </div>
