--- a/app/views/footer/_footer.html.erb
+++ b/app/views/footer/_footer.html.erb
@@ -1,10 +1,20 @@
 <style>
-  .container-footer {
-    position: fixed;
-    z-index: 10;
-    bottom: 10px;
-    color: white;
-  }
+  <% if request.path == root_path %>
+      .container-footer {
+        position: fixed;
+        z-index: 10;
+        bottom: 10px;
+        color: black;
+      }
+    <% else %>
+      .container-footer {
+        position: fixed;
+        z-index: 10;
+        bottom: 10px;
+        color: black;
+      }
+    <% end %>
+
 </style>
 <div class="container-footer">
   <div class="icons">
