--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -5,6 +5,9 @@
       <h1>Tap Into It</h1>
     </div>
     <div class="landing-search-bar">
+      <%= form_tag(beers_path, method: :get) do%>
+      <%= text_field_tag(:search, params[:search], class: "search-bar")%><br>
+      <% end %>
     </div>
   </div>
 </div>
