--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -20,6 +20,19 @@
       </div>
   </div>
 
+  <div class="beer-reviews">
+    <div class="beer-review-title">
+      <h2>Reviews</h2>
+    </div>
+    <div class="show-beer-review">
+      <% @review_beers.each do |review| %>
+      <p class="review-show"><b><%= review.rating %></b> -- <%= review.user.first_name %>: <i style="font-weight: 300;"><%= review.content %></i></p>
+      <% end %>
+    </div>
+  </div>
+
   <%= link_to "Go back to beers", beers_path, class: 'go-to-beers-btn' %>
+
+  <%= link_to "Add review", new_beer_review_beer_path(@beer.id), class: 'add-review-beer-btn'%>
 
 </div>
