--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,8 @@
 // Import page-specific CSS files here.
 @import "landing";
 @import "footer";
-@import "breweries";
+
 @import "beers";
+@import "breweries";
+@import "brewery";
 
