--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,10 +11,14 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "posts/index";
 
 
 a:hover {
   opacity: 0.7 !important;
-  color: white !important;
   text-decoration: none !important;
+}
+
+body {
+  background-color: white;
 }
