almost there posts

--- a/app/views/footer/_footer.html.erb
+++ b/app/views/footer/_footer.html.erb
@@ -1,17 +1,11 @@
 <style>
   <% if request.path == root_path %>
-      .container-footer {
-        position: fixed;
-        z-index: 10;
-        bottom: 10px;
-        color: black;
+      .container-footer a {
+        color: white !important;
       }
     <% else %>
-      .container-footer {
-        position: fixed;
-        z-index: 10;
-        bottom: 10px;
-        color: black;
+      .container-footer a {
+        color: black !important;
       }
     <% end %>
 
