--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,6 +24,7 @@ body {
   height: $height;
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .container-buttons {
@@ -65,7 +66,8 @@ body {
 
 .logo {
   margin-left: 20px;
-  width: ($height)-13;
+  width: ($height)-25;
+  padding-top: 5px;
 }
 
 .btn-active {
@@ -75,8 +77,8 @@ body {
 
 .avatar {
   border-radius: 50%;
-  width: ($height)-25;
-  height: ($height)-25;
+  width: ($height)-40;
+  height: ($height)-40;
   margin-top: 12.5px;
   margin-right: 12.5px;
 }
