--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -7,6 +7,9 @@ $height: 55px;
   justify-content: center;
   height: $height;
   padding-bottom: 13px;
+  position: absolute;
+  height: 35px;
+  margin-top: 30px;
 }
 
 .icons {
