--- a/app/assets/stylesheets/posts/_posts.scss
+++ b/app/assets/stylesheets/posts/_posts.scss
@@ -1,5 +1,8 @@
 .wrapper-posts {
   margin-top: 20px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
@@ -8,8 +11,8 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
   display: flex;
   justify-content: flex-start;
   padding: 10px;
-  padding-bottom: 25px;
-  padding-top: 25px;
+  padding-bottom: 15px;
+  padding-top: 15px;
 
 }
 
@@ -21,6 +24,11 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
   align-items: center;
     i {
       margin-left: 5px;
+      align-self: center;
+    }
+    p {
+      margin-top: auto !important;
+      margin-bottom: auto !important;
     }
 }
 
@@ -32,7 +40,8 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
 }
 
 .likes {
-
+  display: flex;
+  color: black;
 }
 
 .liked {
@@ -43,7 +52,7 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
   color: $shane;
 }
 
-.comments, .likes {
+.comments {
   &:hover {
     color: $shane;
   }
@@ -76,9 +85,26 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 150px;
-  padding-bottom: 30px;
+  padding-bottom:10px;
+  margin-bottom:15px;
+  margin-right:10px;
+  margin-left:10px;
+  border:solid;
+  border-width:1px;
+  position:relative;
+  border-radius:20px;
+  border-color:#686868;
+}
 
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left:10px solid transparent;
+  border-right:10px solid transparent;
+  border-bottom:10px solid #686868;
+  position:absolute;
+  top:-10px;
+  left:50px;
 }
 
 .box-comment {
