--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,9 +13,9 @@
     <div class="box-post">
     <div class="info-post">
       <%= cl_image_tag post.user.photo, class: "avatar-post"%>
-      <%= link_to like_path(post.id) do %>
-        <div class="likes<%= check_liked(post) %>">
-          <%= post.like_beers.all.count %><i class="far fa-thumbs-up"></i> <!-- Set here that if you liked it it displays solid thumb -->
+      <%= link_to like_path(post.id), remote: true do %>
+        <div class="likes<%= check_liked(post) %>", data-div="<%= post.id %>", id="likes-hidden-<%= post.id %>">
+          <p id="likes-count-<%= post.id %>"><%= post.like_beers.all.count %></p><i class="far fa-thumbs-up"></i> <!-- Set here that if you liked it it displays solid thumb -->
         </div>
       <% end %>
       <div class="comments", data-div="wrapper-hidden-<%= post.id %>">
@@ -31,6 +31,7 @@
       </div>
     </div>
     <div class="wrapper-comments hidden" id="wrapper-hidden-<%= post.id %>">
+      <div class="arrow-up"></div>
       <% post.comment_beers.all.each do |comment| %>
         <div class="box-comment">
           <%= comment.content %>
