--- a/app/assets/stylesheets/breweries.scss
+++ b/app/assets/stylesheets/breweries.scss
@@ -2,6 +2,9 @@
   margin-top: 35px;
   text-align: center;
 }
+.breweries-wrapper {
+  background-color: white;
+}
 
 .breweries-cards {
   display: flex;
