fix navbar and footer + first posts wall

--- a/app/assets/stylesheets/beers.scss
+++ b/app/assets/stylesheets/beers.scss
@@ -10,6 +10,7 @@
   flex-wrap: wrap;
   font-family: 'Raleway', sans-serif;
   justify-content: center;
+  padding-bottom: 40px;
 }
 
 .beer-card-body {
