--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -10,6 +10,7 @@ $height: 55px;
   position: absolute;
   height: 35px;
   margin-top: 30px;
+  bottom: 0;
 }
 
 .icons {
@@ -33,4 +34,5 @@ body {
   margin-bottom: 0px;
   margin-right: 0px;
   margin-left: 0px;
+  position: relative;
 }
