--- a/app/assets/stylesheets/posts/_posts.scss
+++ b/app/assets/stylesheets/posts/_posts.scss
@@ -3,6 +3,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  padding-bottom: 40px
 }
 
 div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
