--- a/app/views/footer/_footer.html.erb
+++ b/app/views/footer/_footer.html.erb
@@ -3,6 +3,9 @@
       .container-footer a {
         color: white !important;
       }
+      body {
+      position: static;
+    }
     <% else %>
       .container-footer a {
         color: black !important;
