--- a/app/views/shared/navbar/_navbar_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_white.html.erb
@@ -1,26 +1,45 @@
 <style>
-  .btn-navbar {
-    color: white;
-  }
+.btn-navbar {
+  color: white;
+}
+.dropup, .dropright, .dropdown, .dropleft{
+  color:white;
+}
+.dropdown-menu{
+  background:none;
+  border: none;
+  top: -40px !important;
+}
 
 </style>
 
 <% def current_class?(test_path) %>
-  <% return ' btn-active' if request.path == test_path %>
-  <% ' ' %>
+<% return ' btn-active' if request.path == test_path %>
+<% ' ' %>
 <% end %>
 
 <div class="container-navbar">
   <div class="left-size">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", class: "logo" %>
+    <%= image_tag "logo.png", class: "logo" %>
     <% end %>
   </div>
-  <div class="container-buttons">
+ <!--  <div class="container-buttons">
     <%= link_to "Home", root_path, class: "btn-navbar #{current_class?(root_path)}" %>
     <%= link_to "Messages", root_path, class: "btn-navbar #{current_class?(root_path)}" %>
     <%= link_to "Profile", root_path(current_user.id), class: "btn-navbar #{current_class?(root_path(current_user.id))}" %>
     <%= link_to "Log out", destroy_user_session_path, method: 'delete', class: "btn-navbar " %>
     <%= cl_image_tag current_user.photo , class: "avatar" %>
+  </div> -->
+
+  <div class="dropdown">
+    <i class="fas fa-bars dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+      <%= link_to "Home", root_path, class: "btn-navbar #{current_class?(root_path)}" %>
+      <%= link_to "Messages", root_path, class: "btn-navbar #{current_class?(root_path)}" %>
+      <%= link_to "Profile", root_path(current_user.id), class: "btn-navbar #{current_class?(root_path(current_user.id))}" %>
+      <%= link_to "Log out", destroy_user_session_path, method: 'delete', class: "btn-navbar " %>
+    </div>
   </div>
+
 </div>
