--- a/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
@@ -1,13 +1,22 @@
 <style>
-  .btn-navbar {
-    color: white;
-  }
+.btn-navbar {
+  color: white;
+}
+.dropup, .dropright, .dropdown, .dropleft{
+  color:white;
+}
+.dropdown-menu{
+  background: none;
+  border:none;
+  top: -40px !important;
+}
+
 </style>
 
-  <!-- check if it has to be underlined -->
+<!-- check if it has to be underlined -->
 <% def current_class?(test_path) %>
-  <% return ' btn-active' if request.path == test_path %>
-  <% ' ' %>
+<% return ' btn-active' if request.path == test_path %>
+<% ' ' %>
 <% end %>
 
 
@@ -15,12 +24,21 @@
 <div class="container-navbar">
   <div class="left-size">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", class: "logo" %>
+    <%= image_tag "logo.png", class: "logo" %>
     <% end %>
 
   </div>
-  <div class="container-buttons">
+ <!--  <div class="container-buttons">
     <%= link_to "Sign up", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}" %>
     <%= link_to "Login", new_user_session_path, class: "btn-navbar #{current_class?(new_user_session_path)}" %>
+  </div> -->
+
+  <div class="dropdown">
+    <i class="fas fa-bars dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+      <%= link_to "Sign up", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}" %>
+      <%= link_to "Login", new_user_session_path, class: "btn-navbar #{current_class?(new_user_session_path)}" %>
+    </div>
   </div>
+
 </div>
