--- a/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
@@ -20,7 +20,8 @@
 
   </div>
   <div class="container-buttons">
-    <%= link_to "Sign up", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}" %>
+    <%= link_to "Brewer registration", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}"%>
+    <%= link_to "Sign up", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}"%>
     <%= link_to "Login", new_user_session_path, class: "btn-navbar #{current_class?(new_user_session_path)}" %>
   </div>
 </div>
