--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,12 +9,14 @@ body {
   margin-top: 0px;
   margin-right: 0px;
   margin-left: 0px;
+  height: 100vh
 }
 
 .left-size {
   display: flex;
   justify-content: space-between ;
   flex-direction: row;
+  width: 85vw;
 }
 
 .container-navbar {
@@ -66,6 +68,8 @@ body {
   width: 400px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   padding-left: 20px;
+  width: 100%;
+  max-width: 400px
 }
 
 .search-form {
@@ -73,14 +77,16 @@ body {
   flex-direction: column;
   justify-content: center;
   margin-left: 20px;
+  flex-grow: 1;
+  flex-shrink: 1;
 }
 
 .btn-navbar {
   line-height: 50px;
   text-decoration: none;
   color: black;
-  padding-left: 15px;
-  padding-right: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
   font-size: 20px;
   display: inline-block;
   text-align: center;
@@ -88,6 +94,7 @@ body {
   &:hover {
     color: #353535;
   }
+
 }
 
 .logo {
