--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -1,3 +1,9 @@
+<style>
+  body {
+    height: 100vh;
+  }
+
+</style>
 <div class="landing">
   <div class="landing-content">
     <div class="landing-title">
