--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -3,7 +3,7 @@
   background-size: cover;
   margin: 0;
   height: 100%;
-  position: absolute;
+  position: static;
   top: 0;
   left: 0;
   right: 0;
