--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -36,9 +36,10 @@
   }
 }
 
-.search-bar {
+.search-bar, .search-brewery {
   background: rgba(255, 255, 255, 0.75);
   text-align: center;
+  margin: 10px;
   width: 350px;
   height: 66px !important;
   border-radius: 33px !important;
