--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -6,7 +6,12 @@
     </div>
     <div class="landing-search-bar">
       <%= form_tag(beers_path, method: :get) do%>
-      <%= text_field_tag(:search, params[:search], class: "search-bar")%><br>
+      <%= text_field_tag(:search, params[:search], class: "search-bar", placeholder: "Find a beer...")%><br>
+      <% end %>
+    </div>
+    <div class="brewery-search-bar">
+      <%= form_tag(breweries_path, method: :get) do%>
+      <%= text_field_tag(:search, params[:search], class: "search-brewery", placeholder: "Or a brewery...")%><br>
       <% end %>
     </div>
   </div>
