--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -26,44 +26,7 @@
     </div>
   </div>
 </div>
+
 <div class="wrapper" text-align="center">
-    <div
-      id="map"
-      style="width: 100vw;
-      height: 350px;
-      margin-top: 90px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
-    ></div>
-  <div class="container">
-    <div class="cards">
-      <% @breweries.each do |brew| %>
-        <%= link_to brewery_path(brew) do %>
-        <div class="card">
-            <div>
-
-            <div class="card-link">
-              <div class="card-name">
-                <%= brew.name %><br>
-              </div>
-              <div class="card-location">
-                <%= brew.address %><br>
-              </div>
-            </div>
-          </div>
-
-          <div class="card-footer">
-            <div class="card-date">
-              <p>Posted on 03/02/2019</p>
-            </div>
-            <div class="card-average">
-            </div>
-            <div class="card-price">
-            </div>
-          </div>
-        </div>
-        <% end %>
-      <% end %>
-      </div>
-    </div>
-  </div>
+  <div id="map" style="width: 100vw; height: 350px; margin-top: 90px;" data-markers="<%= @markers.to_json %>" data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+</div>
