--- a/app/views/review_beers/new.html.erb
+++ b/app/views/review_beers/new.html.erb
@@ -1,9 +1,17 @@
-<h1>Add review for specific beer</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 offset-sm-4">
+      <div class="review-form">
+        <h1>Add a review for <%= @beer.name %></h1>
 
-<%= simple_form_for([@beer, @review_beer], :url => beer_review_beers_path) do |f| %>
-  <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
-  <%= f.input :content %>
-  <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %>
-  <%= f.button :submit %>
-  <% end %>
+        <%= simple_form_for([@beer, @review_beer], :url => beer_review_beers_path) do |f| %>
+        <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
+        <%= f.input :content %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
+        <%= f.button :submit, class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
