--- a/app/assets/stylesheets/posts/_posts.scss
+++ b/app/assets/stylesheets/posts/_posts.scss
@@ -6,7 +6,29 @@
   padding-bottom: 40px
 }
 
-div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
+div.wrapper-post:nth-child(even) {
+  background-color: #F5F5F5;
+  .wrapper-comments {
+    background-color: white;
+    .arrow-up {
+      border-bottom:10px solid white;
+    }
+  }
+}
+
+div.wrapper-post:nth-child(odd) {
+  .wrapper-comments {
+    background-color: #F5F5F5;
+    .arrow-up {
+      border-bottom:10px solid #F5F5F5;
+    }
+  }
+}
+
+
+.wrapper-post {
+  width: 100%;
+}
 
 .box-post {
   display: flex;
@@ -88,9 +110,9 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
   justify-content: center;
   padding-bottom:10px;
   margin-bottom:15px;
-  margin-right:10px;
-  margin-left:10px;
-  border:solid;
+  margin-right:65px;
+  margin-left:65px;
+  border:none;
   border-width:1px;
   position:relative;
   border-radius:20px;
@@ -102,7 +124,7 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
   height: 0;
   border-left:10px solid transparent;
   border-right:10px solid transparent;
-  border-bottom:10px solid #686868;
+
   position:absolute;
   top:-10px;
   left:50px;
@@ -110,5 +132,13 @@ div.wrapper-post:nth-child(even) {background-color: #F5F5F5}
 
 .box-comment {
   padding: 15px;
+  display: flex;
+  align-items: center;
+}
+
+.avatar-comment {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
