--- a/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_white.html.erb
@@ -10,6 +10,12 @@
   border:none;
   top: -40px !important;
 }
+.dropdown button {
+  color: white;
+  background:none;
+  border: none;
+  box-shadow: none;
+}
 
 </style>
 
@@ -29,7 +35,7 @@
   </div>
 
   <div class="dropdown">
-    <i class="fas fa-bars dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
+    <button class="dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
       <%= link_to "Sign up", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}" %>
       <%= link_to "Login", new_user_session_path, class: "btn-navbar #{current_class?(new_user_session_path)}" %>
