--- a/app/views/shared/navbar/_navbar_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_logged_in_black.html.erb
@@ -37,7 +37,8 @@
   <button class="dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
     <%= link_to "Home", root_path, class: "dropdown-item btn-navbar #{current_class?(root_path)}" %>
-    <%= link_to "Wall", posts_path, class: "dropdown-item btn-navbar #{current_class?(post_path)}" %>
+    <%= link_to "Beers", beers_path, class: "dropdown-item btn-navbar #{current_class?(beers_path)}" %>
+    <%= link_to "Wall", posts_path, class: "dropdown-item btn-navbar #{current_class?(posts_path)}" %>
     <%= link_to "Profile", root_path(current_user.id), class: "dropdown-item btn-navbar #{current_class?(root_path(current_user.id))}" %>
     <%= link_to "Log out", destroy_user_session_path, method: 'delete', class: "dropdown-item btn-navbar " %>
   </div>
