lil fixes + ajax init

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @user, url: registration_path(@user), html: { method: :put } do |f| %>
-  <%= f.input :name %>
+  <%= f.input :username %>
   <%= f.input :password %>
   <%= f.input :first_name%>
   <%= f.input :last_name%>
