added brewery creation after sign up

--- a/app/views/breweries/new.html.erb
+++ b/app/views/breweries/new.html.erb
@@ -1,2 +1,16 @@
+<h2>Welcome!</h2>
+<h3>Please provide the following information about your brewery.</h3>
+<p>This information will be made available to beer drinkers across the globe.</p>
+<%= simple_form_for(@brewery) do |f| %>
+  <%= f.input :name%>
+  <%= f.input :address %>
+  <%= f.input :description %>
+  <%= f.input :email %>
+  <%= f.input :phone_number %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %><br>
 
-<h1>hello</h1>
+  <%= f.label 'By clicking the button below, you accept our terms and conditions.' %><br>
+
+  <%= f.submit :submit_html => {:style=> 'margin-bottom: 50px'} %><br>
+<% end %>
