--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -41,6 +41,7 @@ body {
   align-items: center;
   padding-left: 20px;
   padding-right: 20px;
+  border: none;
   a {
     border-bottom: solid;
     border-width: 1px;
