--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,7 +21,7 @@
               </div>
               <% end %>
               <div class="comments", data-div="wrapper-hidden-<%= post.id %>">
-                <%= post.comment_beers.all.count %><i class="far fa-comment-dots"></i>
+                <p id="comment-count-<%= post.id %>"><%= post.comment_beers.all.count %></p><i class="far fa-comment-dots"></i>
               </div>
             </div>
             <div class="big-content-post">
@@ -34,17 +34,11 @@
           </div>
           <div class="wrapper-comments hidden" id="wrapper-hidden-<%= post.id %>">
             <div class="arrow-up"></div>
-            <div id="iterated-comments-<%= post.id %>">
+            <ul id="iterated-comments-<%= post.id %>">
               <% post.comment_beers.all.each do |comment| %>
-              <div class="box-comment">
-                <div class="avatar-comment">
-                <%= cl_image_tag comment.user.photo, class: "avatar-post"%>
-                <%= comment.user.username %>
-                </div>
-                <i class="fas fa-angle-double-right" style="margin: 10px"></i>  <%= comment.content %>
-              </div>
+                <%= render 'comment_line', comment: comment %>
               <% end %>
-            </div>
+            </ul>
             <div class="form-comment">
               <%= simple_form_for CommentBeer.new, remote: true do |f| %>
                 <%= f.input :review_beer_id, as: :hidden, :input_html => { :value => post.id} %>
