redirection when log in and sign up and profile page

--- a/app/views/breweries/new.html.erb
+++ b/app/views/breweries/new.html.erb
@@ -1,16 +1,35 @@
-<h2>Welcome!</h2>
-<h3>Please provide the following information about your brewery.</h3>
-<p>This information will be made available to beer drinkers across the globe.</p>
-<%= simple_form_for(@brewery) do |f| %>
-  <%= f.input :name%>
-  <%= f.input :address %>
-  <%= f.input :description %>
-  <%= f.input :email %>
-  <%= f.input :phone_number %>
-  <%= f.input :photo %>
-  <%= f.input :photo_cache, as: :hidden %><br>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 offset-md-6">
+      <div class="form-brewery">
 
-  <%= f.label 'By clicking the button below, you accept our terms and conditions.' %><br>
+          <h2>Welcome!</h2>
+          <h3>Please provide the following information about your brewery.</h3>
+          <p>This information will be made available to beer drinkers across the globe.</p>
+          <%= simple_form_for(@brewery) do |f| %>
+          <div class="form-inputs">
+            <%= f.input :name,
+                        required: true%>
+            <%= f.input :address,
+                        required: true %>
+            <%= f.input :description,
+                        required: true %>
+            <%= f.input :email,
+                        required: true %>
+            <%= f.input :phone_number,
+                        required: true %>
+            <%= f.input :photo,
+                        required: true %>
+            <%= f.input :photo_cache, as: :hidden, required: true %><br>
 
-  <%= f.submit :submit_html => {:style=> 'margin-bottom: 50px'} %><br>
-<% end %>
+            <%= f.label 'By clicking the button below, you accept our terms and conditions.' %><br>
+          </div>
+
+          <div class="form-actions">
+            <%= f.submit :submit_html => {:style=> 'margin-bottom: 50px'}, class: "btn btn-primary" %><br>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
