--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,5 +5,6 @@
 @import "beers";
 @import "breweries";
 @import "brewery";
-@import "review_breweries"
+@import "review_breweries";
+@import "profiles";
 
