--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
 @import "components/index";
 @import "pages/index";
 @import "posts/index";
-
+@import "profile";
 
 a:hover {
   opacity: 0.7 !important;
