--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,13 +1,9 @@
-<div class="profile">
-  <%= cl_image_tag @user.photo, class: "avatar" %>
+<% if current_user.admin? %>
+  <%= render 'brewer_profile.html.erb' %>
+<% else %>
+  <%= render 'user_profile.html.erb' %>
+<% end %>
 
 
-<p> name <%= @user.username %> </p>
-<p> first_name <%= @user.first_name %> </p>
-<p> last_name <%= @user.last_name %> </p>
-<p> email <%= @user.email %> </p>
-<p> description <%= @user.description %> </p>
-<p> location <%= @user.location %> </p>
 
-<%= link_to "Edit", edit_profile_path %>
-</div>
+
