--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -1,8 +1,27 @@
+.container-profile {
+  max-width: 100vw;
+  margin-left: 20px;
+  margin-right: 20px;
+  right: 0;
+  left: 0;
+  padding-bottom:40px;
+}
+
+.marg-bot {
+  margin-bottom: 20px;
+}
+
+.comments-profile {
+  display: flex;
+}
+
 .avatar {
   align-self: center;
-  width: 50%;
-  height: 50%;
+  width: 150px;
+  height: 100px;
   border-radius: 50%;
+  margin-bottom:25px;
+  margin-left: 12.5px;
 }
 
 .profile-name{
@@ -10,18 +29,11 @@
 }
 
 .profile-info {
-  min-height: 500px;
-  width: 25%;
-  position: absolute;
-  left: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   font-weight: 100;
   text-align: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  box-sizing: border-box;
   align-items: center;
 }
 
@@ -49,4 +61,43 @@
   line-height: 30px;
   text-decoration: none;
 }
+
+.friend-btn-container{
+  display:flex;
+  justify-content:space-around;
+  width:120px;
+  align-items:center;
+  border:1px solid;
+  border-radius:5px;
+  height:35px;
+  color:white;
+  a{
+      color:white;
+  }
+  p {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+}
+
+.search-friends-container {
+  display:flex;
+  flex-direction:column;
+  text-align:center;
+  border:1px solid;
+  padding:10px;
+  border-radius:10px;
+  h3 {
+    font-weight: 300;
+  }
+}
+
+#new_user {
+  font-weight: 100;
+  .btn {
+    border: 1px solid;
+    background-color: #DCDDDC;
+  }
+}
+
 
