--- a/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
+++ b/app/views/shared/navbar/_navbar_not_logged_in_black.html.erb
@@ -40,8 +40,8 @@
   <div class="dropdown">
     <button class="dropdown-toggle drop-btn" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-bars"></i></button>
     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-      <%= link_to "Sign up", new_user_registration_path, class: "btn-navbar #{current_class?(new_user_registration_path)}" %>
-      <%= link_to "Login", new_user_session_path, class: "btn-navbar #{current_class?(new_user_session_path)}" %>
+      <%= link_to "Sign up", new_user_registration_path, class: "dropdown-item btn-navbar #{current_class?(new_user_registration_path)}" %>
+      <%= link_to "Login", new_user_session_path, class: "dropdown-item btn-navbar #{current_class?(new_user_session_path)}" %>
     </div>
   </div>
 </div>
