--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -63,21 +63,39 @@
 }
 
 .friend-btn-container{
+  font-weight: 300;
   display:flex;
   justify-content:space-around;
   width:120px;
   align-items:center;
-  border:1px solid;
+  border:2px solid;
   border-radius:5px;
   height:35px;
-  color:white;
+  color:#EAC343;
   a{
-      color:white;
+      color:#EAC343;
   }
   p {
     margin-top: auto;
     margin-bottom: auto;
   }
+}
+
+.profile-numbers {
+
+}
+
+.user-numbers {
+
+}
+
+.numbers-ul {
+  height:120px;
+  display:flex;
+  flex-direction:column;
+  justify-content:space-around;
+  margin-top:40px;
+  list-style:none;
 }
 
 .search-friends-container {
