--- a/app/views/breweries/edit.html.erb
+++ b/app/views/breweries/edit.html.erb
@@ -1,21 +1,30 @@
-<h2>Edit your Brewery Details</h2>
-<p>This information will be made available to beer drinkers across the globe.</p>
-<%= simple_form_for(@brewery) do |f| %>
-  <%= f.input :name,
-              input_html: { autocomplete: "name" } %>
-  <%= f.input :address,
-              input_html: { autocomplete: "address" } %>
-  <%= f.input :description,
-              input_html: { autocomplete: "description" } %>
-  <%= f.input :email,
-              input_html: { autocomplete: "email" } %>
-  <%= f.input :phone_number,
-              input_html: { autocomplete: "phone_number" } %>
-  <%= f.input :photo,
-              input_html: { autocomplete: "photo" } %>
-  <%= f.input :photo_cache, as: :hidden %><br>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-4 offset-md-4">
+      <div class="form-brewery">
 
-  <%= f.label 'By clicking the button below, you accept our terms and conditions.' %><br>
+        <h2>Edit your Brewery Details</h2>
+        <p>This information will be made available to beer drinkers across the globe.</p>
+        <%= simple_form_for(@brewery) do |f| %>
+          <%= f.input :name,
+                      input_html: { autocomplete: "name" } %>
+          <%= f.input :address,
+                      input_html: { autocomplete: "address" } %>
+          <%= f.input :description,
+                      input_html: { autocomplete: "description" } %>
+          <%= f.input :email,
+                      input_html: { autocomplete: "email" } %>
+          <%= f.input :phone_number,
+                      input_html: { autocomplete: "phone_number" } %>
+          <%= f.input :photo,
+                      input_html: { autocomplete: "photo" } %>
+          <%= f.input :photo_cache, as: :hidden %><br>
 
-  <%= f.submit :submit_html => {:style=> 'margin-bottom: 50px'} %><br>
-<% end %>
+          <%= f.label 'By clicking the button below, you accept our terms and conditions.' %><br>
+
+          <%= f.submit :submit_html => {:style=> 'margin-bottom: 50px'} %><br>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
