--- a/app/views/profiles/_brewer_profile.html.erb
+++ b/app/views/profiles/_brewer_profile.html.erb
@@ -17,6 +17,27 @@
       <p>To edit your brewery details, <%= link_to "click here", edit_brewery_path(@brewery[0].id) %></p>
 
       <p>Here are your actively listed beers:</p>
+      <% @beers.each do |beer| %>
+      <%= link_to beer_path(beer) do %>
+      <div class="beer-card">
+        <div class="beer-card-body" style="background-image: linear-gradient(-150deg, rgba(0,101,168,0.2) 0%, rgba(0,36,61,0.3) 80%), url(<%= cl_image_path(beer.photo) %>">
+          <div class="beer-card-link">
+            <div class="beer-card-name">
+              <%= beer.name %><br>
+            </div>
+            <div class="beer-card-alcohol">
+              <%= beer.alcohol_percentage %>%<br>
+            </div>
+            <div class="beer-card-brewery">
+              <%= beer.brewery.name %><br>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% end %>
+    <% end %>
     </div>
   </div>
 </div>
+<p><%= link_to "Click here to add a new beer", new_beer_path %></p>
+
