--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -36,7 +36,9 @@
 
     <%= link_to "Add review", new_beer_review_beer_path(@beer.id), class: 'add-review-beer-btn'%>
       <% if current_user.admin? && current_user.id == @beer.brewery_id %>
-        <%= link_to "Edit this beer", edit_beer_path(@beer.id) %>
+        <%= link_to "Edit this beer", edit_beer_path(@beer.id), class: 'links-buttons' %>
+         <%= link_to "Create a new batch", new_beer_batch_path(@beer), class: 'links-buttons' %>
+        <%= link_to "All the batches from this beer", beer_batches_path(@beer), class: 'links-buttons' %>
       <% end %>
 
   </div>
