--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 offset-sm-4">
       <div class="form-signup">
-        <h2>Sign in</h2>
+        <h2>Sign up</h2>
 
         <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= f.error_notification %>
@@ -30,7 +30,9 @@
           <div class="form-actions">
             <%= f.button :submit, "Sign up", class: "btn btn-primary" %>
           </div>
-          <%= render "devise/shared/links" %>
+          <div class="already-have-account">
+          <%= link_to "Already have an account? Log in here", new_user_session_path, :style=> 'margin-bottom: 50px' %>
+          </div>
         <% end %>
       </div>
     </div>
