--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -2,3 +2,5 @@
 <li><strong>batch description:</strong><%= @batch.description %></li>
 <li><strong>batch quantity:</strong><%= @batch.quantity %></li>
 <li><strong>Bottled on:</strong><%= @batch.bottled_date %></li>
+
+<%= link_to "show qr code", qr_code_path(@batch.id) %>
