generate mail to user when a batch is created

--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -29,7 +29,7 @@ table.qr-code td.white { background-color: #fff; }
  }
 </style>
 
-<h1>User#welcome</h1>
+<h1>Good day brew!</h1>
 
 
 <table class="qr-code">
@@ -47,6 +47,6 @@ table.qr-code td.white { background-color: #fff; }
 </table>
 <p>Hi <%= @user.email %>,</p>
 
-<p>Today we'll talk about SMTP and Postmark!</p>
+<p>This is your QR code print it and add it to your SKU!</p>
 
 <p>See ya!</p>
